# llm-autopilot

./: .env.example  .gitignore  Dockerfile  README.md  nixpacks.toml  pyproject.toml  railway.toml  requirements.txt
api/: main.py
classifier/: classifier.py  model.joblib  train.py  training_data.py
dashboard/: app.py
logs/: database.py
models/: client.py  registry.py  response.py
router/: router.py
scripts/: benchmark.py  seed_db.py
