[project]
name = "llm-autopilot"
version = "0.1.0"
description = "Automatically routes prompts to the cheapest LLM that can handle them"
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "aiosqlite",
    "scikit-learn",
    "joblib",
    "openai",
    "anthropic",
    "streamlit",
    "pandas",
    "requests",
]

[project.optional-dependencies]
dev = ["pytest", "httpx"]

[tool.pytest.ini_options]
testpaths = ["tests"]
